<resources>
    <string name="app_name">AFFIX</string>

    // Strings for the Register Student Page
    <string name="welcome">Welcome to AFFIX-UCSB</string>
    <string name="prompt">Please fill out the info below to sign up</string>
    <string name="first_name">First Name:</string>
    <string name="last_name">Last Name:</string>
    <string name="umail">Umail:</string>
    <string name="end_umail">\@umail.ucsb.edu</string>
    <string name="perm">Perm:</string>
    <string name="phone">Phone:</string>
    <string name="major">Major:</string>
    <string name="residence">Current Resident of:</string>
    <string name="password">Password:</string>
    <string name="confirm_password">Confirm Password:</string>
    <string name="Warning"> Ensure that you have entered in the proper prefix to you umail account and perm number.
    You will receive an email to complete the registration process in your umail account.</string>
    <string name="register"> Register </string>
    <string name="confirm">Confirm Account</string>

    //Strings of Majors
    <string-array name="Majors">
        <item> College of Engineering</item>
        <item> Chemical Engineering </item>
        <item> Computer Science </item>
        <item> Computer Engineering </item>
        <item> Electrical Engineering </item>
        <item> Materials </item>
        <item> Mechanical Engineering </item>
        <item> College of Letters &amp; Science </item>
        <item> Anthropology </item>
        <item> Art </item>
        <item> Asian American Studies </item>
        <item> Biomolecular Science and Engineering </item>
        <item> Black Studies </item>
        <item> Chemistry </item>
        <item> Biochemistry </item>

    </string-array>

    //Strings of Living Spaces
    <string-array name="LivingSpaces">
        <item> Non UCSB Housing</item>
        <item> Isla Vista</item>

        <item>Residence Halls</item>
        <item> Anacapa </item>
        <item> San Miguel </item>
        <item> San Nicolas</item>
        <item> Santa Cruz </item>
        <item> Santa Rosa </item>
        <item> San Rafael </item>
        <item> Manzanita </item>
        <item> Santa Catalina North</item>
        <item> Santa Catalina South</item>

        <item> Apartments </item>
        <item> El Dorado </item>
        <item> Santa Ynez </item>
        <item> West Winds </item>
        <item> Sierra Madre </item>
        <item> San Joaquin </item>
        <item> San Clemente </item>


    </string-array>


    //Strings for the Login Student Page
    <string name="Affix">AFFIX-UCSB</string>
    <string name="Username">Username:</string>
    !- Password string is declared earlier -!
    <string name="hintuser">Umail prefix unless changed</string>
    <string name="goRegister">Don\'t have an account? Register here.</string>
    <string name="login"> Login </string>


    !- Strigns for the tabs -!
    <string name="smartsell"> Smart Sell</string>
    <string name="VTour"> VTour </string>
    <string name="GauchoLink"> GauchoLink</string>
    !- Strings for the Actionbar Overflow -!
    <string name="profile"> My Profile </string>

</resources>
