<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/fadeblue"
    tools:context=".RegisterStudent">


<ScrollView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/scrollView">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


    <TextView
        android:id="@+id/Welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textSize="28dp"
        android:textStyle="bold"
        android:fontFamily="Comic Sans"
        android:textColor="#000"
        android:gravity="left"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:id="@+id/asktofill"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/prompt"
        android:textSize="15dp"
        android:textColor="#000"
        android:fontFamily="Comic Sans"
        android:layout_below="@+id/Welcome"
        android:gravity="left"/>

        <TextView
            android:id="@+id/FirstNameText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/first_name"
            android:textSize="20dp"
            android:textStyle="bold"
            android:textColor="#000"
            android:fontFamily="Comic Sans"
            android:layout_below="@+id/asktofill"
            android:paddingTop="20dp" />

        <EditText
            android:id="@+id/first_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="Joe"
            android:ems="10"
            android:layout_below="@+id/FirstNameText"
            />

        <TextView
            android:id="@+id/LastNameText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/last_name"
            android:textSize="20dp"
            android:textStyle="bold"
            android:textColor="#000"
            android:fontFamily="Comic Sans"
            android:layout_below="@+id/first_name"
            android:paddingTop="20dp" />

        <EditText
            android:id="@+id/last_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="Gaucho"
            android:ems="10"
            android:layout_below="@+id/LastNameText"
            />

        <TextView
            android:id="@+id/umailtext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/umail"
            android:textSize="20dp"
            android:textStyle="bold"
            android:textColor="#000"
            android:fontFamily="Comic Sans"
            android:layout_below="@+id/last_name"
            android:paddingTop="20dp"
            />

        <EditText
            android:id="@+id/umailpreffix"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="joe_gaucho"
            android:ems="10"
            android:layout_below="@+id/umailtext"
            />

        <TextView
            android:id="@+id/endumail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/end_umail"
            android:textSize="20dp"
            android:textColor="#000"
            android:fontFamily="Comic Sans"
            android:paddingTop="5dp"
            android:layout_below="@+id/umailtext"
            android:layout_alignParentRight="true"/>

<TextView
    android:id="@+id/majors"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/major"
    android:textSize="20dp"
    android:textStyle="bold"
    android:textColor="#000"
    android:fontFamily="Comic Sans"
    android:layout_below="@+id/umailpreffix"
    android:paddingTop="20dp"/>


        <Spinner
            android:id="@+id/MajorSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/majors"
             />

        <TextView
            android:id="@+id/currentResidenceText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/residence"
            android:textSize="20dp"
            android:textStyle="bold"
            android:textColor="#000"
            android:fontFamily="Comic Sans"
            android:layout_below="@+id/MajorSpinner"
            android:paddingTop="10dp"
            />

        <Spinner
            android:id="@+id/ResidenceSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/currentResidenceText"/>

        <TextView
            android:id="@+id/PhoneNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone"
            android:textSize="20dp"
            android:textStyle="bold"
            android:textColor="#000"
            android:fontFamily="Comic Sans"
            android:layout_below="@id/ResidenceSpinner"
            android:paddingTop="10dp"/>

        <EditText
            android:id="@+id/phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:hint="optional"
            android:textColorHint="#ff0000"
            android:layout_below="@+id/PhoneNumber"
            />

        <TextView
            android:id="@+id/passwordtext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textSize="20dp"
            android:textStyle="bold"
            android:textColor="#000"
            android:fontFamily="Comic Sans"
            android:layout_below="@+id/phone"
            android:paddingTop="10dp"/>

        <EditText
            android:id="@+id/password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:layout_below="@id/passwordtext" />

        <TextView
            android:id="@+id/confirmpasswordtext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirm_password"
            android:textSize="20dp"
            android:textStyle="bold"
            android:textColor="#000"
            android:fontFamily="Comic Sans"
            android:layout_below="@+id/password"
            android:paddingTop="10dp"/>

        <EditText
            android:id="@+id/confirmpassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:layout_below="@id/confirmpasswordtext" />

        <TextView
            android:id="@+id/warningmessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Warning"
            android:layout_below="@+id/confirmpassword"
            android:paddingTop="10dp"/>

        <Button
            android:id="@+id/submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:layout_below="@+id/warningmessage"
            android:clickable="true"
            android:onClick="REGISTER"/>

        <TextView
            android:id="@+id/confirmation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/submit"
            android:text="" />


</RelativeLayout>
</ScrollView>


</RelativeLayout>
