<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.ucsbapp.phillip.affix.LoginStudent"
    android:background="@drawable/fadeblue">

    <TextView
        android:id="@+id/Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/Affix"
        android:textSize="40dp"
        android:textStyle="bold"
        android:textColor="#000"
        android:fontFamily="Comic Sans"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/UserNameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/Username"
        android:textStyle="bold"
        android:textColor="#000"
        android:fontFamily="Comic Sans"
        android:layout_above="@+id/username"
        android:layout_alignLeft="@+id/username"
        android:layout_alignStart="@+id/username" />

    <EditText
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/hintuser"
        android:ems="11"
        android:layout_above="@+id/passwordtext"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/passwordtext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/password"
        android:textStyle="bold"
        android:textColor="#000"
        android:fontFamily="Comic Sans"
        android:layout_centerVertical="true"
        android:layout_alignLeft="@+id/username"
        android:layout_alignStart="@+id/username"
        android:paddingTop="5dp"/>

    <EditText
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:hint="you created it"
        android:layout_below="@+id/passwordtext"
        android:layout_alignLeft="@+id/passwordtext"
        android:layout_alignStart="@+id/passwordtext" />

    <Button
        android:id="@+id/Loginbtn"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:layout_below="@+id/password"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/gotoRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/goRegister"
        android:textStyle="italic"
        android:textColor="#470fd4"
        android:layout_below="@+id/Loginbtn"
        android:layout_centerHorizontal="true"
        android:onClick="GoToRegistration"
        android:clickable="true"/>
</RelativeLayout>
